--- a/Share Beauty App/Base.lproj/NewApproachViewController.storyboard
+++ b/Share Beauty App/Base.lproj/NewApproachViewController.storyboard
@@ -193,7 +193,7 @@ Your skin</string>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fvd-Oa-hRY">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fvd-Oa-hRY">
                                         <rect key="frame" x="-103" y="-236" width="1024" height="700"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
@@ -215,14 +215,14 @@ Your skin</string>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="41q-ek-qyl" userLabel="Regenerate">
-                                <rect key="frame" x="597" y="374" width="350" height="130"/>
+                                <rect key="frame" x="587" y="354" width="361" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
                                     <action selector="onTapRegenerate:" destination="TYu-Ly-iev" eventType="touchUpInside" id="yBJ-Ku-5Tx"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K7y-8G-Tef" userLabel="Defend">
-                                <rect key="frame" x="68" y="374" width="350" height="130"/>
+                                <rect key="frame" x="67" y="354" width="361" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
                                     <action selector="onTapDefend:" destination="TYu-Ly-iev" eventType="touchUpInside" id="KNU-Pa-f3g"/>
