--- a/Share Beauty App/Base.lproj/NewApproachViewController.storyboard
+++ b/Share Beauty App/Base.lproj/NewApproachViewController.storyboard
@@ -19,7 +19,7 @@
                         <viewControllerLayoutGuide type="top" id="GxM-2e-1gf"/>
                         <viewControllerLayoutGuide type="bottom" id="ZzZ-dp-gYp"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="EqY-Bj-1qo">
+                    <view key="view" contentMode="scaleAspectFit" id="EqY-Bj-1qo">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -193,7 +193,7 @@ Your skin</string>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fvd-Oa-hRY">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fvd-Oa-hRY">
                                         <rect key="frame" x="-103" y="-236" width="1024" height="700"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
@@ -215,14 +215,14 @@ Your skin</string>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="41q-ek-qyl" userLabel="Regenerate">
-                                <rect key="frame" x="587" y="354" width="361" height="150"/>
+                                <rect key="frame" x="589" y="250" width="172" height="65"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
                                     <action selector="onTapRegenerate:" destination="TYu-Ly-iev" eventType="touchUpInside" id="yBJ-Ku-5Tx"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K7y-8G-Tef" userLabel="Defend">
-                                <rect key="frame" x="67" y="354" width="361" height="150"/>
+                                <rect key="frame" x="257" y="250" width="172" height="65"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
                                     <action selector="onTapDefend:" destination="TYu-Ly-iev" eventType="touchUpInside" id="KNU-Pa-f3g"/>
