--- a/Share Beauty App/Base.lproj/TopViewController.storyboard
+++ b/Share Beauty App/Base.lproj/TopViewController.storyboard
@@ -25,20 +25,27 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PoE-RB-gRx">
                                 <rect key="frame" x="0.0" y="0.0" width="507" height="748"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="top_thema_image" translatesAutoresizingMaskIntoConstraints="NO" id="Ccs-zj-OlO">
+                                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="top_thema_image" translatesAutoresizingMaskIntoConstraints="NO" id="Ccs-zj-OlO">
                                         <rect key="frame" x="79" y="262" width="360" height="101"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="Ccs-zj-OlO" secondAttribute="height" multiplier="360:101" id="aWH-qz-MUi"/>
                                         </constraints>
                                     </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y4T-hx-ntr">
+                                        <rect key="frame" x="0.0" y="0.0" width="507" height="748"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="y4T-hx-ntr" firstAttribute="top" secondItem="PoE-RB-gRx" secondAttribute="top" id="76m-Tc-U1E"/>
                                     <constraint firstItem="Ccs-zj-OlO" firstAttribute="centerY" secondItem="PoE-RB-gRx" secondAttribute="centerY" constant="-62" id="Bv4-y7-AGT"/>
+                                    <constraint firstAttribute="bottom" secondItem="y4T-hx-ntr" secondAttribute="bottom" id="D9k-Fy-Ij6"/>
                                     <constraint firstItem="Ccs-zj-OlO" firstAttribute="leading" secondItem="PoE-RB-gRx" secondAttribute="leading" constant="79" id="Ijl-Gq-NGh"/>
+                                    <constraint firstItem="y4T-hx-ntr" firstAttribute="leading" secondItem="PoE-RB-gRx" secondAttribute="leading" id="IpW-yJ-noc"/>
                                     <constraint firstItem="Ccs-zj-OlO" firstAttribute="centerX" secondItem="PoE-RB-gRx" secondAttribute="centerX" constant="5.5" id="MAC-hu-fhN"/>
                                     <constraint firstAttribute="width" constant="507" id="OUH-Lu-g3p"/>
                                     <constraint firstAttribute="trailing" secondItem="Ccs-zj-OlO" secondAttribute="trailing" constant="68" id="QeR-Zo-LWo"/>
+                                    <constraint firstAttribute="trailing" secondItem="y4T-hx-ntr" secondAttribute="trailing" id="vTl-3g-7v7"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FHi-aa-YBh">
@@ -308,6 +315,7 @@
                         </variation>
                     </view>
                     <connections>
+                        <outlet property="mImgVMainVisual" destination="y4T-hx-ntr" id="ElS-LM-Mcw"/>
                         <outlet property="mVMenuContainer" destination="FHi-aa-YBh" id="Du3-Tj-d6Y"/>
                         <outletCollection property="mBtnMenus" destination="HBd-Up-qFw" collectionClass="NSMutableArray" id="4dQ-00-NAJ"/>
                         <outletCollection property="mBtnMenus" destination="Sgi-Ik-ocE" collectionClass="NSMutableArray" id="uY3-Ts-78R"/>
