--- a/Share Beauty App/Base.lproj/LifeStyleViewController.storyboard
+++ b/Share Beauty App/Base.lproj/LifeStyleViewController.storyboard
@@ -82,7 +82,7 @@
                                     <constraint firstItem="6wJ-QY-g1s" firstAttribute="height" secondItem="OWZ-GI-f3H" secondAttribute="height" id="wED-UC-MAS"/>
                                 </constraints>
                             </scrollView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mlv-bI-3Km" customClass="AVPlayerView" customModule="Share_Beauty_App" customModuleProvider="target">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mlv-bI-3Km" customClass="AVPlayerView" customModule="Share_Beauty_App" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
